<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/a_main_bg"
    tools:context="com.kb260.gxdk.view.me.AddCardActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        style="@style/item_llTheme"
        >
        <TextView
            android:textSize="14sp"
            android:textColor="@color/txt333"
            android:text="@string/a_me_meDetail_card_name"
            android:layout_width="85dp"
            android:layout_height="wrap_content" />

        <EditText
            android:lines="1"
            android:maxLength="20"
            android:id="@+id/a_addCard_etName"
            android:hint="@string/a_me_meDetail_card_nameHint"
            android:textColorHint="@color/txt999"
            android:textSize="14sp"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        style="@style/item_llTheme2"
        >
        <TextView
            android:textSize="14sp"
            android:textColor="@color/txt333"
            android:text="@string/a_me_meDetail_card_idCard"
            android:layout_width="85dp"
            android:layout_height="wrap_content" />

        <EditText
            android:lines="1"
            android:maxLength="18"
            android:id="@+id/a_addCard_etIdCard"
            android:hint="@string/a_me_meDetail_card_idCardHint"
            android:textColorHint="@color/txt999"
            android:textSize="14sp"
            android:inputType="number"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        style="@style/item_llTheme2"
        >
        <TextView
            android:textSize="14sp"
            android:textColor="@color/txt333"
            android:text="@string/a_me_meDetail_card_cardNum"
            android:layout_width="85dp"
            android:layout_height="wrap_content" />

        <EditText
            android:lines="1"
            android:maxLength="30"
            android:id="@+id/a_addCard_etCardNum"
            android:hint="@string/a_me_meDetail_card_cardNumHint"
            android:textColorHint="@color/txt999"
            android:textSize="14sp"
            android:inputType="number"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        style="@style/item_llTheme2"
        >
        <TextView
            android:textSize="14sp"
            android:textColor="@color/txt333"
            android:text="@string/a_me_meDetail_card_bank"
            android:layout_width="85dp"
            android:layout_height="wrap_content" />

        <EditText
            android:lines="1"
            android:maxLength="20"
            android:id="@+id/a_addCard_etBank"
            android:hint="@string/a_me_meDetail_card_bankHint"
            android:textColorHint="@color/txt999"
            android:textSize="14sp"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        style="@style/item_llTheme2"
        >
        <TextView
            android:textSize="14sp"
            android:textColor="@color/txt333"
            android:text="@string/a_me_meDetail_card_branch"
            android:layout_width="85dp"
            android:layout_height="wrap_content" />

        <EditText
            android:lines="1"
            android:maxLength="20"
            android:id="@+id/a_addCard_etBranch"
            android:hint="@string/a_me_meDetail_card_branchHint"
            android:textColorHint="@color/txt999"
            android:textSize="14sp"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        style="@style/item_llTheme2"
        >
        <TextView
            android:textSize="14sp"
            android:textColor="@color/txt333"
            android:text="@string/a_me_meDetail_card_phone"
            android:layout_width="85dp"
            android:layout_height="wrap_content" />

        <EditText
            android:lines="1"
            android:maxLength="20"
            android:id="@+id/a_addCard_etPhone"
            android:hint="@string/a_me_meDetail_card_phoneHint"
            android:textColorHint="@color/txt999"
            android:textSize="14sp"
            android:inputType="phone"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        style="@style/item_llTheme2">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/txt333"
            android:text="@string/a_me_meDetail_changePhone_code"
            android:layout_width="85dp"
            android:layout_height="wrap_content" />

        <EditText
            android:lines="1"
            android:maxLength="20"
            android:id="@+id/a_addCard_etCode"
            android:hint="@string/a_me_meDetail_changePhone_codeHint"
            android:textColorHint="@color/txt999"
            android:textSize="14sp"
            android:inputType="number"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/a_addCard_btGetCode"
            android:textSize="12sp"
            android:text="@string/a_me_meDetail_changePhone_getCode"
            android:textColor="@color/toolbar_white"
            android:background="@drawable/get_code_bt"
            android:layout_width="wrap_content"
            android:layout_height="26dp" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/a_addCard_btSave"
        android:background="@drawable/bt_1"
        android:textColor="@color/toolbar_white"
        android:textSize="17sp"
        android:text="@string/a_me_meDetail_changePhone_save"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_width="250dp"
        android:layout_height="49dp" />

</LinearLayout>
